--- a/kicad/.gitignore
+++ b/kicad/.gitignore
@@ -1,4 +1,6 @@
-alleycat-backups
+alleycat-backups/
+left/alleycat_left-backups/
+right/alleycat_right-backups/
 alleycat_left.kicad_sch
 alleycat_right.kicad_sch
 fp-info-cache
