--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.blend filter=lfs diff=lfs merge=lfs -text
 /blend/the[[:space:]]keyboard.blend filter=lfs diff=lfs merge=lfs -text
+/blend/models/DSA2.step filter=lfs diff=lfs merge=lfs -text
